# convex_hulls

./: .gitignore  CMakeLists.txt  README.md  convex_hulls.json  result_convex_hulls.json
include/geometry/: line.h  line_segment.h  point.h  polygon.h  ray.h
lib/geometry/: line.cpp  line_segment.cpp  point.cpp  polygon.cpp  ray.cpp
src/: main.cpp
tool/: visualize.py
tools/: expected_result_convex_hulls.json  visualize.py
